hard-gists/561bf3bf6c1477d99e7b/run.log
=== Docker Run Log for 561bf3bf6c1477d99e7b ===
Started at: Mi 29. Okt 15:47:25 CET 2025

[2025-10-29 15:47:25] START: Running container for 561bf3bf6c1477d99e7b
[2025-10-29 15:47:26] SUCCESS: Container 75a9540067772396f19da4252333803af2a9e739764b0407fec6240d123d08b1 started for 561bf3bf6c1477d99e7b
=== Container logs for 561bf3bf6c1477d99e7b ===
  File "/snippet.py", line 28
    except Exception, exc:
           ^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 561bf3bf6c1477d99e7b ===
[2025-10-29 15:47:28] INFO: Container 75a9540067772396f19da4252333803af2a9e739764b0407fec6240d123d08b1 has stopped
